# models-in-tees

./: .dockerignore  .env.example  .gitignore  .npmignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  tsconfig.server.json  vercel.json
api/: [...path].ts
docs/: GCP_CONFIDENTIAL_VM.md  MAGICBLOCK_PER_PLAN.md  TRUST_MODEL.md
programs/private_gpt_receipts/: Cargo.toml
programs/private_gpt_receipts/src/: lib.rs
scripts/: devnetCommit.ts  publicAudit.ts  smoke.ts  train_sae.py
src/model/: model_runner.py
src/server/: anchorCommit.ts  audit.ts  canonical.ts  config.ts  index.ts  magicblock.ts  magicblockProgram.ts  modelRunner.ts  receipts.ts  solana.ts  store.ts  teeEvidence.ts  types.ts  workload.ts
src/web/: AuditorLab.tsx  exampleSuites.ts  main.tsx  styles.css
