[package]
name = "private_gpt_receipts"
version = "0.1.0"
description = "Private GPT receipt commitment program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_gpt_receipts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
